@@ -70,6 +70,9 @@
 /* Define to 0 or 1 to override MIKMOD_UNIX in mikmod_internals.h. */
 #cmakedefine MIKMOD_UNIX 1
 
+/* disable the high quality mixer (build only with the standart mixer) */
+#cmakedefine  NO_HQMIXER 1
+
 /* ========== Build environment information */
 
 /* Define if your system is SunOS 4.* */
