@@ -54,6 +54,9 @@ CPPFLAGS+=-DDRV_WAV
 # support for output raw data to a file:
 CPPFLAGS+=-DDRV_RAW
 
+# disable the high quality mixer (build only with the standart mixer)
+#CPPFLAGS+=-DNO_HQMIXER
+
 CPPFLAGS+=-DHAVE_FCNTL_H -DHAVE_LIMITS_H -DHAVE_UNISTD_H -DHAVE_SNPRINTF -DHAVE_PTHREAD -DHAVE_SRANDOM
 
 # compiler flags
@@ -245,4 +248,3 @@ virtch2.o: ../playercode/virtch2.c ../playercode/virtch_common.c $(HEADER_DEPS)
 	$(COMPILE) ../playercode/virtch2.c -o virtch2.o
 virtch_common.o: ../playercode/virtch_common.c $(HEADER_DEPS)
 	$(COMPILE) ../playercode/virtch_common.c -o virtch_common.o
-
