@@ -10,6 +10,9 @@
 /* Define if you have the ANSI C header files.  */
 #define STDC_HEADERS 1
 
+/* disable the high quality mixer (build only with the standart mixer) */
+/* #define NO_HQMIXER */
+
 /* Define if you want support for output to stdout */
 #define DRV_STDOUT 1
 
